assets/css/styles.css
/* ... */
.grid-card {
    text-align: center;
    padding: 2em;
    width: 210px;
    height: 210px;
}

/*This represents the background images for the grid cards.*/
.grid-card__background--basics {
    background-image:
        url("https://rebellionwebdesign.github.io/fab-forever/assets/img/fab-forever-cards-basics.png");
}

.grid-card__background--models {
    background-image:
        url("https://rebellionwebdesign.github.io/fab-forever/assets/img/fab-forever-cards-models.png");
}

.grid-card__background--help {
    background-image:
        url("https://rebellionwebdesign.github.io/fab-forever/assets/img/fab-forever-cards-help.png");
}

.grid-card__background--materials {
    background-image:
        url("https://rebellionwebdesign.github.io/fab-forever/assets/img/fab-forever-cards-materials.png");
}

/*Styles for the testimonial section*/
.testimonial-card {
    padding: 2rem;
    width: 90%;
}

.testimonial-card img {
    border: 1rem solid #9B00FF;
    border-radius: 50%;
}

.testimonial-card p {
    padding-left: 3em;
}

.testimonial-text {
    font-size: 1.8rem;
}

.contact .column-2 p {
    margin-top: 2rem;
}

/*Styles for the form we ave at the bottom of the page*/
label {
    vertical-align: top;
    font-family: montserrat, sans-serif;
    font-size: 1.2rem;
    color: rgb(0, 0, 0);
}

.red-star {
    color: red;
}

.form-wrapper {
    width: 76.2%;
    height: auto;
    padding: 2em;
    background-color: white;
    border-radius: 1rem;
}

.form-wrapper h3 {
    margin-bottom: 3rem;
    width: 100%;
}

input[type=text],
input[type=email] {
    width: 100%;
    height: 4rem;
    margin-bottom: 2rem;
    padding-left: 2em;
    border-radius: 2rem;
    border: 1px solid rgb(150, 150, 150);
}

.legal-text {
    margin-bottom: 1rem;
}

.newsletter {
    padding-left: 0;
    color: black;
}

/*Styles for the footer*/
footer {
    width: 100%;
    height: 8vh;
    background-color: var(--color-light);
}

.footer-logo {
    width: 20rem;
}

.social {
    margin-left: auto;
}

.social-icon {
    width: 2.5rem;
    height: 100%;
    margin-left: 2rem;
}

/*Styles for the response*/
.response {
    width: 60%;
    height: 50%;
    background-color: var(--color-light);
    padding: 40px;
}

/*MEDIA QUERIES*/

/*MEDIA FOR XXL SCREENS (1400px)*/
@media screen and (max-width: 1400px) {

    html, body {
        width: 100%;
        overflow-x: hidden;
    }

    /*Sets the container element (every section has one) to 85.72% or about 1200px (1200px/1400px = 1200.8px)*/
    .container {
        width: 85.72%;
    }

    .column-2 {
        width: 50%;
    }
    
    .hero-image {
        width: 80%;
    }

    /*Testimonial Section*/
    .testimonial-card > img {
        width: 20%;
    }

    /*Footer Section*/
    .footer-logo {
       width: 20rem; 
    }

    picture > img {
        width: 100%;
    }

}

/*MEDIA QUERIES FOR XL SCREENS (1200px)*/
@media screen and (max-width: 1200px) {



    html, body {
        width: 100%;
        overflow-x: hidden;

    }
    /*General headings for the breakpoint*/
    h1 {
        font-size: 3.5rem;
    }

    h2 {
        font-size: 3rem;
    }

    h3 {
        font-size: 2rem;
    }

    .grid-container {
        padding: 0;
        width: 100%;
    }

    picture > img {
        width: 100%;
    }

}

/*MEDIA QUERIES FOR L SCREENS (992px)*/
@media screen and (max-width: 992px) {

    html, body {
        width: 100%;
        overflow-x: hidden;

    }

    .column-2-mobile {
        width: 100%;
    }

    .text-center-mobile {
        text-align: center;
    }

    .flex-column-mobile {
        flex-direction: column;
    }

    .grid-container {
        margin-top: 3rem;
        place-items: center;
        grid-template-columns: repeat(1, 1fr);
        grid-template-rows: repeat(4, 1fr);
        grid-column-gap: 20px;
        grid-row-gap: 20px;
    }

    .testimonial-card {
        margin-top: 3rem;
    }

    .form-wrapper {
        width: 50%;
        margin: 0 auto;
    }

    label {
        padding: 0;
    }

    picture > img {
        width: 100%;
    }

    ul> li > a {
        font-size: 1.2rem;
    }

    .response {
        width: 100%;
    }
}

/*MEDIA QUERIES FOR M SCREENS (762px)*/
@media screen and (max-width: 762px) {

    html, body {
        width: 100%;
        overflow-x: hidden;

    }

    .column-2__nav--mobile {
        position: absolute;
        top: 0;
        right: 0;
        width: 45vw;
        height: 100vh;
        z-index: 1;
        background: var(--color-primary);
        background: linear-gradient(43deg, var(--color-primary) 0%, var(--color-secondary) 95%);
        justify-content: center;
        align-items: center;
        text-align: center;
        flex-direction: column;
        transition: 1s ease-in-out;
    }

    nav li {
        display: block;
        padding: 0;
        margin-top: 2rem;
    }

    nav li a {
        color: var(--color-light);
    }


    nav a {
        color: var(--color-light);
    }

    .full-row {
        width: 100%;
    }

    .mobile--open {
        display: block;
        width: 2.5rem;
        height: 2.5rem;
    }

    .mobile--close {
        width: 2.5rem;
        height: 2.5rem;
        display: block;
    }

    .hide-mobile {
        display: none;
    }

    .open {
        right: 0;
    }

    .closed {
        right: -45vw;
    }


    .form-wrapper {
        width: 70%;
    }

    .response {
        width: 100%;
    }
}
/* ... */

